--- a/src/template1.html
+++ b/src/template1.html
@@ -6,27 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Template 1</title>
     <style>
-       
-        #center {
-            float: center;
+        #Top-Section {
             width: 70%;
             margin-left: 15%;
             margin-top: 4%;
             margin-right: 15%;
             text-align: justify;
         }
-       
+       #list {
+           width:70%;
+           margin-top: 3%;
+           margin-left: 13%;
+           margin-right: 15%;
+           text-align: justify;
+       }
     </style>
 </head>
 <body>
 
-    <div id="center">
+    <div id="Top-Section">
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed sollicitudin arcu. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti. Ut lobortis malesuada tristique. Nam quis orci sed magna tempor eleifend sit amet sollicitudin odio. Phasellus finibus quis augue in malesuada. Nulla eu elit ut justo pulvinar cursus id non tellus. Donec euismod elit a vehicula mattis. Aliquam magna nisl, commodo vel mollis ut, aliquam id risus. Mauris gravida eget nulla id ullamcorper. Sed venenatis, ante at tincidunt vulputate, tellus ligula lacinia nunc, sodales lobortis quam mauris quis ex.
         </p>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed sollicitudin arcu. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti. Ut lobortis malesuada tristique. Nam quis orci sed magna tempor eleifend sit amet sollicitudin odio. Phasellus finibus quis augue in malesuada. Nulla eu elit ut justo pulvinar cursus id non tellus. Donec euismod elit a vehicula mattis. Aliquam magna nisl, commodo vel mollis ut, aliquam id risus. Mauris gravida eget nulla id ullamcorper. Sed venenatis, ante at tincidunt vulputate, tellus ligula lacinia nunc, sodales lobortis quam mauris quis ex.
         </p>
+    </div>
+
+    <div id="list">
+        <ul>
+            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+            <br>
+            <li>Sed venenatis, ante at tincidunt vulputate, tellus ligula lacinia nunc, sodales lobortis quam mauris quis ex.</li>
+            <li>Nulla ullamcorper tortor vitae sem tristique aliquet.</li>
+            <li>Pellentesque sed placerat leo.</li>
+            <li>Sed convallis purus nisi, sit amet maximus sapien mattis vel.</li>
+            <br>
+            <li>Duis auctor in diam ut rhoncus.</li>
+            <li>Morbi id lorem eu enim sollicitudin lobortis at a orci.</li>
+            <br>
+            <li>Proin iaculis libero viverra scelerisque iaculis.</li>
+            <li>Phasellus porttitor mi vel vulputate blandit.</li>
+            <li>Interdum et malesuada fames ac ante ipsum primis in faucibus.</li>
+            <li>Etiam tincidunt orci quis magna dictum placerat.</li>
+        </ul>
     </div>
 </body>
 </html>
